[Private Reserve] Add 'pr_loadout' console command

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
   "terminal.integrated.defaultProfile.windows": "Git Bash",
+  "Lua.workspace.library": [
+    "${addons}/garrysmod/module/library"
+  ],
+  "Lua.runtime.nonstandardSymbol": [
+    "continue"
+  ],
+  "Lua.diagnostics.disable": [
+    "duplicate-set-field"
+  ],
+  "Lua.runtime.version": "LuaJIT",
 }
