style: Reformat code
Now I use formatter from 'sumneko.lua' instead of GLuaLint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,16 @@
     "${addons}/garrysmod/module/library"
   ],
   "Lua.runtime.nonstandardSymbol": [
-    "continue"
+    "continue",
+    "/**/"
   ],
   "Lua.diagnostics.disable": [
     "duplicate-set-field"
   ],
   "Lua.runtime.version": "LuaJIT",
+  "Lua.workspace.checkThirdParty": false,
+  "Lua.runtime.special": {
+    "include": "dofile",
+    "IncludeCS": "dofile"
+  },
 }
