--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,10 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
-end_of_line = crlf
 charset = utf-8
-trim_trailing_whitespace = true
+end_of_line = crlf
+indent_size = 2
+indent_style = space
 insert_final_newline = true
+max_line_length = 250
+trim_trailing_whitespace = true
